# trocq

./: .gitignore  AUTHORS  CITATION.cff  Dockerfile  INSTALL.md  Makefile  Makefile.common  README.md  _CoqProject  coq-trocq-dev.opam  coq-trocq-hott-examples.opam  coq-trocq-hott.opam  coq-trocq-std-examples.opam  coq-trocq-std.opam  coq-trocq.opam  default.nix  meta.yml
.devcontainer/: devcontainer.json
.nix/: config.nix
docs/: home.md  quick-start.md
elpi/: annot.elpi  class.elpi  database.elpi  param-class-util.elpi  param.elpi  sort.elpi  tactic.elpi  util-rocq.elpi  util.elpi  vernac.elpi
examples/: Makefile  Makefile.conf  N.v  _CoqProject  artifact_paper_example.v  flt3_step.v  int_to_Zp.v  list_option.v  misc.v  nat_ind.v  peano_bin_nat.v  setoid_rewrite.v  square_and_cube_mod7.v  stuck.v  summable.v  trocq_gen_rewrite.v  trocq_setoid_rewrite.v
generic/: Database.v  Param.v  Param_Empty.v  Param_bool.v  Param_list.v  Param_nat.v  Param_option.v  Param_paths.v  Param_prod.v  Param_sigma.v  Param_sum.v  Param_trans.v  Param_vector.v  Trocq.v  Vernac.v
hott/: Common.v  Hierarchy.v  HoTT_additions.v  Optimality.v  Param.v  Param44.v  Param_Type.v  Param_arrow.v  Param_bool.v  Param_forall.v  Param_lemmas.v  Param_nat.v  Param_sort.v  Param_vector.v  Stdlib.v  Uparam.v  _CoqProject
std/: Common.v  Database.v  Hierarchy.v  HoTTNotations.v  HoTT_compatibility.v  Optimality.v  Param.v  Param_Empty.v  Param_Prop.v  Param_Type.v  Param_arrow.v  Param_bool.v  Param_forall.v  Param_lemmas.v  Param_list.v  Param_nat.v  Param_option.v  Param_paths.v  Param_prod.v  (+8 more)
(+85 files in other folders)
